[project]
name = "experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioodbc>=0.5.0",
    "asyncio>=4.0.0",
    "azure-ai-documentintelligence>=1.0.2",
    "fastapi>=0.116.1",
    "google-cloud-vision>=3.10.2",
    "google-genai==1.11.0",
    "langchain-community>=0.3.29",
    "langchain[google-genai,grok,groq,openai,xai]>=0.3.27",
    "langgraph>=0.6.7",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pymsteams>=0.2.5",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "python-tds>=1.17.1",
    "scikit-learn>=1.7.1",
    "sqlalchemy-pytds>=1.0.2",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn>=0.35.0",
]
